Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 2.9.0
-
None
-
ghx-label-7
Description
Literal::CreateLiteral() somehow wrapped ParseString() with DCHECK which renders it no-op in release builds. Literal::CreateLiteral() seems to be broken that way for quite a while and recent change in expr-test ran into this booby-trap.
04:00:43 [ RUN ] ExprTest.LiteralConstruction 04:00:43 /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/exprs/expr-test.cc:1150: Failure 04:00:43 Value of: RawValue::Compare(eval->GetValue(nullptr), &value, type) 04:00:43 Actual: -1 04:00:43 Expected: 0 04:00:43 type: BOOLEAN, value: true 04:00:43 /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/exprs/expr-test.cc:1150: Failure 04:00:43 Value of: RawValue::Compare(eval->GetValue(nullptr), &value, type) 04:00:43 Actual: -102 04:00:43 Expected: 0 04:00:43 type: TINYINT, value: f 04:00:43 /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/exprs/expr-test.cc:1150: Failure 04:00:43 Value of: RawValue::Compare(eval->GetValue(nullptr), &value, type) 04:00:43 Actual: -123 04:00:43 Expected: 0 04:00:43 type: SMALLINT, value: 123 04:00:43 /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/exprs/expr-test.cc:1150: Failure 04:00:43 Value of: RawValue::Compare(eval->GetValue(nullptr), &value, type) 04:00:43 Actual: -1 04:00:43 Expected: 0 04:00:43 type: INT, value: 234 04:00:43 /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/exprs/expr-test.cc:1150: Failure 04:00:43 Value of: RawValue::Compare(eval->GetValue(nullptr), &value, type) 04:00:43 Actual: -1 04:00:43 Expected: 0 04:00:43 type: INT, value: 234 04:00:43 /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/exprs/expr-test.cc:1150: Failure 04:00:43 Value of: RawValue::Compare(eval->GetValue(nullptr), &value, type) 04:00:43 Actual: -1 04:00:43 Expected: 0 04:00:43 type: BIGINT, value: 1234 04:00:43 /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/exprs/expr-test.cc:1150: Failure 04:00:43 Value of: RawValue::Compare(eval->GetValue(nullptr), &value, type) 04:00:43 Actual: -1 04:00:43 Expected: 0 04:00:43 type: BIGINT, value: 1234 04:00:43 /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/exprs/expr-test.cc:1150: Failure 04:00:43 Value of: RawValue::Compare(eval->GetValue(nullptr), &value, type) 04:00:43 Actual: -1 04:00:43 Expected: 0 04:00:43 type: FLOAT, value: 3.1400001049041748 04:00:43 /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/exprs/expr-test.cc:1150: Failure 04:00:43 Value of: RawValue::Compare(eval->GetValue(nullptr), &value, type) 04:00:43 Actual: -1 04:00:43 Expected: 0
Attachments
Issue Links
- is broken by
-
IMPALA-4192 Pull all expressions in a fragment into QueryState
-
- Resolved
-